<resources>
    <string name="app_name">BelyegzoExpressz</string>
    <string name="location">1162 Budapest, Cziráki u. 26-32. \nFőépület, 1. em. 113.</string>
    <string name="title">Bélyegző Expressz Bt.</string>
    <string name="email">belyegzo@belyegzoexpressz.hu</string>
    <string name="tel">+36 1 – 411 – 1212</string>
    <string name="open">Nyitvatartás:\nH  P: 9:00 – 17:00</string>
    <string name="website">http://belyegzoexpressz.hu/</string>
</resources>
