<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.android.belyegzoexpressz.MainActivity">


    <ImageView
        android:id="@+id/borito"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="4"
        android:background="@color/white"
        android:src="@drawable/belyegzok" />


    <TextView
        android:id="@+id/cim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:autoLink="map"
        android:drawableLeft="@drawable/map"
        android:drawablePadding="30dp"
        android:drawableTint="@color/red"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textIsSelectable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/dark" />

    <TextView
        android:id="@+id/open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="30dp"
        android:drawableTint="@color/yellow"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/open"
        android:textColor="@color/white"
        android:textIsSelectable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/dark" />

    <TextView
        android:id="@+id/telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:autoLink="phone"
        android:drawableLeft="@drawable/telephone"
        android:drawablePadding="30dp"
        android:drawableTint="@color/orange"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/tel"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/dark" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:autoLink="email"
        android:drawableLeft="@drawable/envelope"
        android:drawablePadding="30dp"
        android:drawableTint="@color/blue"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/white" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/dark" />


    <TextView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1"
        android:autoLink="web"
        android:drawableLeft="@drawable/webshop"
        android:drawablePadding="30dp"
        android:drawableTint="@color/green"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/website"
        android:textColor="@color/white" />

</LinearLayout>
